--- a/roulette.html
+++ b/roulette.html
@@ -865,7 +865,7 @@
                         </div>
                         <h3 class="roulette__item-title">Черви</h3>
                       </div>
-                      <div class="roulette__item-bid roulette__item-bid_green">
+                      <div class="roulette__item-bid">
                         <span>Ставка</span> X2
                       </div>
                     </label>
@@ -881,7 +881,7 @@
                         </div>
                         <h3 class="roulette__item-title">Монета</h3>
                       </div>
-                      <div class="roulette__item-bid roulette__item-bid_red">
+                      <div class="roulette__item-bid">
                         <span>Ставка</span> Х14
                       </div>
                     </label>
@@ -947,8 +947,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -967,8 +967,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -987,8 +987,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -1007,8 +1007,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -1027,8 +1027,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -1047,8 +1047,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -1067,8 +1067,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              1000
                             </div>
                           </div>
 
@@ -1098,7 +1098,7 @@
                       </svg>
                     </button>
                     <div class="panel">
-                      <div class="roulette__item">
+                      <div class="roulette__item won">
                         <div class="roulette__item-body">
                           <div class="roulette__item-row">
                             <div class="roulette__item-left">
@@ -1115,7 +1115,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1135,7 +1135,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1155,7 +1155,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1175,7 +1175,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1195,7 +1195,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1215,7 +1215,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1235,7 +1235,7 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
+                            <div class="roulette__item-money">
                               +1000
                             </div>
                           </div>
@@ -1265,7 +1265,7 @@
                       </svg>
                     </button>
                     <div class="panel">
-                      <div class="roulette__item">
+                      <div class="roulette__item lost">
                         <div class="roulette__item-body">
                           <div class="roulette__item-row">
                             <div class="roulette__item-left">
@@ -1282,8 +1282,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
@@ -1302,8 +1302,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
@@ -1322,8 +1322,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
@@ -1342,8 +1342,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
@@ -1362,8 +1362,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
@@ -1382,8 +1382,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
@@ -1402,8 +1402,8 @@
                               </div>
                             </div>
 
-                            <div class="roulette__item-money roulette__item-money_green">
-                              +1000
+                            <div class="roulette__item-money">
+                              -1000
                             </div>
                           </div>
 
